--- a/file1.html
+++ b/file1.html
@@ -6,6 +6,12 @@
     <title>git f 1</title>
 </head>
 <body>
-    
+    <ul>
+        <li>get test1</li>
+        <li>get test2</li>
+        <li>get test2</li>
+        <li>get test4</li>
+        <li>get test5</li>
+    </ul> 
 </body>
 </html>
