--- a/file1.html
+++ b/file1.html
@@ -6,13 +6,12 @@
     <title>git f 1</title>
 </head>
 <body>
-        <h1>hello Git from remote</h1>
+    <h1>hello Git from remote github</h1>
     <ul> 
         <li>test 1</li>
         <li>test 2</li>
         <li>test 3</li>
         <li>test 4</li>
     </ul>
-    
 </body>
 </html>
